# Calculator3

./: .gitignore  CMakeLists.txt  SPList.c  SPList.h  SPListElement.h  calculate.c  calculate.h  common.c  common.h  expected2.err  expected2.out  graph.c  graph.h  hashtable.c  hashtable.h  input1.in  input3.in  main.c  makefile  parse.c  parse.h  run.sh  setup.sh  test.c  test.sh  test_new.sh  tree.c  tree.h
SP/: SPCalculator.g  makefile
tests/1/: expected1.out  input1.in
tests/2/: expected2.err  input2.in
tests/3/: expected3.err  expected3.out  input3.in
tests/4/: expected4.out  input4.in
tests/5/: expected5.out  input5.in
tests/6/: expected6.err  input6.in
tests/7/: expected7.err  expected7.out  input7.in
tests_new/1/: expected1.out  test1.in
tests_new/2/: expected2.out  test2.in  test2.v
tests_new/3/: expected3.out  test3.in
tests_new/4/: expected4.out  test4.in  test4.v
tests_new/5/: expected5.out  test5.in
tests_new/graph_test/: gA  gB  gC  gD  gE  gF  gG  graph.in  graphExpectedOutput
tests_new/median_average_test/: medianAverage.in  medianAverageExpected.out
